# django-tasksheet

./: README.md
django-task/: LICENSE  MANIFEST.in  pyproject.toml  setup.cfg
django-task/django_task.egg-info/: PKG-INFO
django-task/task/: admin.py
django-task/task/migrations/: 0001_initial.py  0003_alter_status_options.py
django-task/task/static/task/: style.css
server/: db.sqlite3
server/server/: settings.py
tasksheet/: db.sqlite3  pyproject.toml
tasksheet/django-task/: README.rst  setup.cfg
tasksheet/django-task/django_task.egg-info/: PKG-INFO  SOURCES.txt
tasksheet/django-task/task/templates/task/: detail.html  status.html
tasksheet/task/: models.py  tests.py  urls.py  views.py
tasksheet/task/migrations/: 0002_rename_completion_status_rename_status_status_room.py
tasksheet/task/templates/task/: detail.html  index.html  results.html  status.html
tasksheet/tasksheet/: asgi.py  settings.py  urls.py  wsgi.py
tasksheet/templates/admin/: base_site.html  index.html
world/: db.sqlite3  manage.py
world/members/: views.py
world/members/migrations/: 0001_initial.py
world/members/templates/: index.html
world/members/templates/registration/: login.html
world/world/: asgi.py  settings.py  urls.py  wsgi.py
