[metadata]
name = django-task
version = 0.1
description = A Django app to conduct web-based task.
long_description = file: README.rst
url = https://task.herokuapp.com
author = Stella
author_email = stellavir11@gmail.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming language :: Python
    Programming language :: Python :: 3
    Programming language :: Python :: 3 :: Only
    Programming language :: Python :: 3.8.9
    Programming language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.8
install_requires =
    Django >= 4.1
